--- a/ingestion/.env.example
+++ b/ingestion/.env.example
@@ -6,3 +6,8 @@ API_KEY=your-apikey
 
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:4000
 RATE_LIMIT_REQUESTS=100
+
+# Aggregator Configuration (optional)
+AGGREGATOR_ENABLED=true
+AGGREGATOR_INTERVAL=1h
+AGGREGATOR_RUN_ON_STARTUP=false
